--- a/frontend/projects-list.html
+++ b/frontend/projects-list.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <section>
+        <a href="" id="logout-btn">Logout</a>
+        <a href="login.html" id="login-btn">Login</a>
+    </section>
     <section id='projects--wrapper'>
 
     </section>
